Fix some missing documentation and warnings on devtools::check().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(save_dsd_script)
 export(save_reactions_txt)
 export(update_crn_4domain)
 export(update_neuron_input_hje)
+importFrom(Rdpack,reprompt)
 importFrom(utils,capture.output)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
